--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         section {
             margin-bottom: 2rem;
         }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -56,11 +65,16 @@
         <section id="about">
             <h2>About</h2>
             <p>This is the about page.</p>
+            <p>More about us: We are passionate about creating awesome websites.</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
             <p>This is the contact page.</p>
+            <p>Get in touch: <a href="mailto:info@example.com">info@example.com</a></p>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2024 My Website</p>
+    </footer>
 </body>
 </html>
